--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@aws-amplify/core": "^4.3.13",
+    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "^7.1.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/react-native-vector-icons": "^6.4.10",
+    "amazon-cognito-identity-js": "^5.2.5",
+    "aws-amplify": "^4.3.13",
+    "aws-sdk": "^2.1066.0",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
@@ -31,7 +37,9 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.23",
+    "@types/node": "^17.0.13",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
