--- a/package.json
+++ b/package.json
@@ -16,21 +16,27 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/react-native-vector-icons": "^6.4.10",
+    "add": "^2.0.6",
     "amazon-cognito-identity-js": "^5.2.5",
     "aws-amplify": "^4.3.13",
     "aws-sdk": "^2.1066.0",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "yarn": "^1.22.17",
     "yup": "^0.32.11"
   },
   "devDependencies": {
