--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-confirmation-code-field": "^7.3.0",
